added example link comment

--- a/view/index.html
+++ b/view/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+    <!-- styling from http://www.beoplay.com/ -->
     <meta charset="UTF-8">
     <title>Charity For Children | Kids Charity | Childrens Charity | Child Charities</title>
     <meta name="description" content="Koru Care NZ is a charity for children who have disabilities or a terminal illness. Koru Care are the only kids charity that do thr Trip of a Lifetime for these children, destinations include Disneyland and Goldcoast. Please show your support and donate to this worthy childrens charity."/>
