--- a/view/index.html
+++ b/view/index.html
@@ -42,6 +42,18 @@
             margin-top: -15px;
         }
 
+        .k-navs-right{
+            margin: 0;
+            position: absolute;
+            padding: 0;
+            top: 0;
+            right: 10px;
+        }
+
+        .k-navs-right ul{
+            list-style: none;
+        }
+
         .k-main{
             padding: 15px;
             min-height: 600px;
@@ -61,13 +73,31 @@
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
+            position: relative;
+        }
 
+        .k-banner{
+            padding: 5px;
+            font-size: 50px;
+            font-weight: 700;
+            color: #fff;
+            text-transform: uppercase;
+        }
+
+        .k-bottom-right{
+            position: absolute;
+            right: 40px;
+            bottom: 40%;
+        }
+
+        .k-magenta{
+            background-color: magenta;
         }
 
         .k-content{
             width: 100%;
             min-height: 600px;
-            padding: 15px;
+            background: #eee;
         }
 
         .k-tiles {
@@ -120,13 +150,27 @@
 <body>
     <header>
         <div class="k-logo">
-            <img src="img/KoruCare%20New%20FinalArt_Koru%20Care%20Colour.png">
+            <img src="img/logos/KoruCare%20New%20FinalArt_Koru%20Care%20Colour.png">
+        </div>
+        <div class="k-navs-right">
+            <ul>
+                <li style="margin-right: 15px;">
+                    <svg fill="#323232" height="42" viewBox="0 0 24 24" width="42" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                    </svg>
+                </li>
+            </ul>
         </div>
 
     </header>
 
     <div class="k-main">
-        <div class="k-hero"></div>
+        <div class="k-hero">
+            <div class="k-banner k-bottom-right k-magenta">
+                Making dreams come true
+            </div>
+        </div>
         <div class="k-content">
             <div id="map" class="k-map">
                 <script>
