--- a/view/index.html
+++ b/view/index.html
@@ -313,7 +313,7 @@
 
     </footer>
 
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC71b81QhdAeR7OwVHPi77EC2Y3Ugrp2qs&callback-initMap"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC71b81QhdAeR7OwVHPi77EC2Y3Ugrp2qs&callback=initMap"></script>
 
 
 </body>
