--- a/view/index.html
+++ b/view/index.html
@@ -291,6 +291,7 @@
         .k-donate{
             position: relative;
             text-align: center;
+            background: #fff;
         }
 
         .k-donate h1{
@@ -315,6 +316,12 @@
         .k-blackout{
             background: #212121;
             padding-bottom: 50px;
+        }
+
+        .k-sponsor img{
+            width: auto;
+            height: 100px;
+            margin: 10px;
         }
 
     </style>
@@ -410,46 +417,43 @@
 
 
                 </div>
-
-                <div class="k-tiles k-block clearfix">
-                    <h1>Our News</h1>
-                    <div class="k-tile">
-                        <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
-                        <div class="k-tile-desc">
-                            <h1>Lorem Ipsum</h1>
-                             simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                    <div class="k-tile">
-                        <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
-                        <div class="k-tile-desc">
-                            <h1>Lorem Ipsum</h1>
-                            simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                    <div class="k-tile">
-                        <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
-                        <div class="k-tile-desc">
-                            <h1>Lorem Ipsum</h1>
-                            simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                    <div class="k-tile">
-                        <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
-                        <div class="k-tile-desc">
-                            <h1>Lorem Ipsum</h1>
-                            simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                </div>
             </div>
 
-            <div class="k-block k-blackout">
+            <div class="k-block k-donate">
+                <div class="k-donate-wrapper">
+                </div>
+
+                <h1 style="color: white">Donate</h1>
+
+                <p>Koru Care NZ is an independent charity, and as such relies on the generosity and support of the community to make its trips possible. A donation to Koru Care helps to bring children together, children who all face some challenge in their lives, be it an ongoing medical condition, terminal illness or some other challenge in their life.
+                    How To Donate</p>
+
+                <p>To start donating to help Koru Care you can select one of the options below:</p>
+
+                <ul>
+                    <li style="text-align: left;">Online – Make a Personal Donation, or if you’re a company, click on one of the buttons above.</li>
+                    <li style="text-align: left;">Givealittle – Click this Givealittle link to make a donation.</li>
+                    <li style="text-align: left;">Call Koru Care NZ – 09 5232456</li>
+                </ul>
+            </div>
+
+            <div class="k-block k-sponsor">
                 <script src="vendor/mediaelement/build/jquery.js"></script>
                 <script src="vendor/mediaelement//build/mediaelement-and-player.min.js"></script>
                 <link rel="stylesheet" href="vendor/mediaelement/build/mediaelementplayer.min.css" />
 
-                <h1 style="color: #fff">Partners</h1>
+                <h1>Partners</h1>
+
+                <div style="display: inline-flex">
+                    <img src="img/logos/airnz-2.png">
+                    <img src="img/logos/pp_logo.png">
+                    <img src="img/logos/fullers_logo.png">
+                    <img src="img/logos/Knott_s_Berry_Farm_28637013.png">
+                    <img src="img/logos/logo_universal-studios-hollywood.png">
+                    <img src="img/logos/300px-SeaWorld_San_Diego_logo.svg.png">
+                    <img src="img/logos/logo_dw.png">
+                </div>
+
                 <video width="95%" height="480" id="player1" preload="none">
                     <source type="video/youtube" src="https://youtu.be/lhjEDQT4c5Y" />
                 </video>
@@ -470,23 +474,39 @@
                 </style>
             </div>
 
-            <div class="k-block k-donate">
-                <div class="k-donate-wrapper">
+            <div class="k-tiles k-block clearfix">
+                <h1>Our News</h1>
+                <div class="k-tile">
+                    <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
+                    <div class="k-tile-desc">
+                        <h1>Lorem Ipsum</h1>
+                        simply dummy text of the printing and typesetting industry.
+                    </div>
                 </div>
-
-                <h1 style="color: white">Donate</h1>
-
-                <p>Koru Care NZ is an independent charity, and as such relies on the generosity and support of the community to make its trips possible. A donation to Koru Care helps to bring children together, children who all face some challenge in their lives, be it an ongoing medical condition, terminal illness or some other challenge in their life.
-                    How To Donate</p>
-
-                <p>To start donating to help Koru Care you can select one of the options below:</p>
-
-                <ul>
-                    <li style="text-align: left;">Online – Make a Personal Donation, or if you’re a company, click on one of the buttons above.</li>
-                    <li style="text-align: left;">Givealittle – Click this Givealittle link to make a donation.</li>
-                    <li style="text-align: left;">Call Koru Care NZ – 09 5232456</li>
-                </ul>
+                <div class="k-tile">
+                    <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
+                    <div class="k-tile-desc">
+                        <h1>Lorem Ipsum</h1>
+                        simply dummy text of the printing and typesetting industry.
+                    </div>
+                </div>
+                <div class="k-tile">
+                    <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
+                    <div class="k-tile-desc">
+                        <h1>Lorem Ipsum</h1>
+                        simply dummy text of the printing and typesetting industry.
+                    </div>
+                </div>
+                <div class="k-tile">
+                    <image src="img/12195124_10203617835205587_6323645368294507667_o.jpg" class="k-image-zoom"></image>
+                    <div class="k-tile-desc">
+                        <h1>Lorem Ipsum</h1>
+                        simply dummy text of the printing and typesetting industry.
+                    </div>
+                </div>
             </div>
+
+
         </div>
     </div>
 
