added css animations

--- a/view/index.html
+++ b/view/index.html
@@ -16,6 +16,18 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css" rel="stylesheet">
+
+    <style>
+        [aos="fade"] {
+            opacity: 0;
+            transition-property: opacity;
+        }
+
+        [aos="fade"].aos-animate {
+            opacity: 1;
+        }
+    </style>
 
 </head>
 <body>
@@ -55,10 +67,10 @@
     <div class="k-main">
         <div class="k-hero">
             <div class="k-banner-wapper k-bottom-right">
-                <div class="k-banner  k-magenta">
+                <div class="k-banner  k-magenta" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     Making dreams come true
                 </div>
-                <div class="k-banner k-magenta">
+                <div class="k-banner k-magenta" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     for over 30 years
                 </div>
             </div>
@@ -89,21 +101,21 @@
                 <!--simply dummy text of the printing and typesetting industry.-->
 
 
-                <div class="k-location-tiles">
-                    <ul class="k-location-ul clearfix">
-                        <li>
+                <div class="k-location-tiles" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <ul class="k-location-ul clearfix" data-aos="fade-up">
+                        <li data-aos="fade-up">
                             <div class="k-location-tile k-auckland"></div>
                             <span class="k-location-label">Auckland Region</span>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <div class="k-location-tile k-christhurch"></div>
                             <span class="k-location-label">Christchurch Region</span>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <div class="k-location-tile k-southland"></div>
                             <span class="k-location-label">Otago Region</span>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <div class="k-location-tile k-otago"></div>
                             <span class="k-location-label">Southland Region</span>
                         </li>
@@ -116,7 +128,7 @@
 
                 <!--<h1>Donate</h1>-->
 
-                <div class="k-random-donate">
+                <div class="k-random-donate" data-aos="fade-up">
                     <label>I want to donate</label>
                     <input type="text" placeholder="100">
                     <div class="k-button">Make Donation</div>
@@ -232,6 +244,15 @@
     <footer>
 
     </footer>
+
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
+
+    <script>
+        AOS.init({
+
+        });
+    </script>
+
 
     <!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC71b81QhdAeR7OwVHPi77EC2Y3Ugrp2qs&callback=initMap"></script>-->
 
