--- a/view/style/style.css
+++ b/view/style/style.css
@@ -176,12 +176,30 @@ h1 {
 .k-tile-desc h1{
     margin:0;
 }
+.k-tile-a{
+    color: #fff;
+    font-size: 20px;
+    position: absolute;
+    right: 15px;
+    bottom: 18px;
+    z-index: 1;
+    text-decoration: none;
+    transition: transform .3s;
+    -webkit-transition: -webkit-transform .3s;
+    -moz-transition: -moz-transform .3s;
+}
+
+.k-tile-a:hover{
+    -moz-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+}
+
 
 footer{
     width:100%;
     min-height: 300px;
     background: #232323;
-    margin:0 -15px;
     padding:0;
 }
 
